# tinnitus-art-generators

./: .gitignore  PYTHON_MATLAB_COMPARISON.md  PYTHON_RUST_MATLAB_COMPARISON.md  README.md
python/: audiogram_example.csv  audiogram_example.json  audiogram_speros.csv  audiogram_speros.json  generate_tinnitus_art.py
rust/: Cargo.toml
rust/src/: main.rs
