[package]
name = "tinnitus-art-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
hound = "3"
rand = { version = "0.9", features = ["small_rng"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
